--- a/app/exemplos/eventos.component.html
+++ b/app/exemplos/eventos.component.html
@@ -20,6 +20,7 @@
                 <br/>
                 <span (mouseover)="onMouseSpan()"
                       (mouseout)="onMouseSpan()"
+                      [class.destaque]="isMouseOver"
                 >Estilos no Angular 2</span>    
             </div>
         </article>
